[package]
name = "loxosceles"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
chrono-simpletz = { version = "0.3.0", features = ["serde"] }
dirs = "6.0.0"
google-drive = "0.7.0"
json = "0.12.4"
log = "0.4.28"
pretty_env_logger = "0.5.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
teloxide = { version = "0.17.0", features = ["full", "macros"] }
teloxide-core = "0.13.0"
time = { version = "0.3.43", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
